# boat

./: .gitignore  CMakeLists.txt  README.md  README.zh_cn.md  boat.cc  boat.h  boat_config.h  c.json  config.h.in  config.xml  json_test.cc  log.txt  main.cc  nohup.out  points.txt  rec.json  receive.json  send.json  test.cc
algorithm/: CMakeLists.txt  algorithm.cc  algorithm.h
c_socket/: client.c  client.cc  formula.c  server.cc  string.c
ctimer/: CMakeLists.txt  ctimer.cc  ctimer.h
geo_to_utm/: CMakeLists.txt
kalman_filter/: KalmanFilter.h
navigation/: CMakeLists.txt  navigation.cc  navigation.h  navigation_config.h
navigation/point/: CMakeLists.txt  point.cc  point.h
scripts/: draw_points.py  get_points.py  pid_show.py  server.py
scripts/openmv/: main.py
scripts/templates/: index.html
serial_communication/: CMakeLists.txt  serial_communication.cc  serial_communication.h
socket_communication/: CMakeLists.txt  socket_communication.cc  socket_communication.h
system_detection/: CMakeLists.txt  system_detection.cc  system_detection.h
timer/: CMakeLists.txt  timer.cc  timer.h
